--- a/midfi_proto/style.css
+++ b/midfi_proto/style.css
@@ -408,23 +408,24 @@ td {
    ========================================================================== */
 body {
     padding: 0 1% 0 1%;
-    background-color: rgb(197, 135, 135);
-    background-color: gray;
+    background: gray;
 }
 
 header {
     overflow: hidden;
-    padding-top: 6px;
+    padding-top: 15px;
     border-bottom: 1px solid #333;
     box-shadow: 0 10px 18px -8px;
     position: fixed;
-    z-index: 1;
+    z-index: 100;
     width: 98%;
     background: gray;
-    
+    top:0;
 }
 
-
+#first {
+    margin-top: 75px;
+}
 
 .login {
     color: white;
@@ -475,34 +476,55 @@ header {
     width: 60px;
 }
 
-#main {
+.main {
     padding-top: 35px;
     
 }
 .tab {
-
+    width: 145px;
+background: #cecece;
+margin-top: 40px;
+padding-left: 16px;
+padding-top: 12px;
+margin-left: 37px;
+border-top-left-radius: 15px;
+border-top-right-radius: 15px;
+border: 1px solid;
 }
+
+footer {
+    height: 400px;
+    _background: red;
+}
+
+
 
 
 /* ft scroller */
 /* Set the size of the scroller.  Visible border to make the demo easier to understand */
-        .scrollable { white-space: nowrap; width: 100%; height: 200px; overflow: hidden;
+        .scrollable { white-space: nowrap;
+            width: 100%;
+            overflow: hidden;
             box-shadow: 0 10px 18px -8px;
             padding: 0px;
-
+            display: inline-flex;
         }
 
         /* Style each 'page' to be the same size and join together into a long horizontal strip.  Use display: table on the section wrapper to get rid of whitespace between the inline-blocks. */
         .sectionwrapper {
-            display: table;
+            
+            
 
 
         }
-        .sectionwrapper section { width: 200px;  display: inline-block;
-            padding-top: 20px;
+        .sectionwrapper section {
+            width: 200px;
+            display: inline-block;
+            counter-increment: movie;
+            
         }
         .sectionwrapper section div {
-            vertical-align: center;
+
             padding: 50px;
             overflow: hidden;
             white-space: normal;
@@ -519,10 +541,39 @@ header {
             transition: all 0.5s;
             transform: scale(1.1);
 
+        }.sectionwrapper section div:after {
+            content: 'Movie ' counter(movie);
+
         }
 
-        .scrollable {
-            float: left;
+        .scrollable:before,
+        .scrollable:after {
+            
+            margin-top: 0px;
+            width: 19px;
+            text-align: center;
+            line-height: 133px;
+            background-color: #cecece;
+            cursor: pointer;
+            color: #57595b;
+            
+            
+            border: 1px solid;
+            padding: 5px;
+            position: absolute;
+            z-index: 1;
+        }
+
+        .scrollable:before{
+            content: ' < ';
+            border-bottom-right-radius: 10px;
+            border-top-right-radius: 10px;
+        }
+        .scrollable:after {
+            content: ' > ';
+            border-bottom-left-radius: 10px;
+            border-top-left-radius: 10px;
+            margin-left: -30px;
         }
 
 
