--- a/midfi_proto/style.css
+++ b/midfi_proto/style.css
@@ -720,6 +720,7 @@ footer {
             padding: 5px;
             position: absolute;
             z-index: 1;
+            opacity: 0.7;
         }
 
         .scrollable:before{
@@ -735,6 +736,28 @@ footer {
         }
 
 
+.showmore {
+    padding: 5px;
+    padding-right: 15px;
+    padding-left: 10px;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+    position: absolute;
+    right: 10px;
+    font-size: 0.7em;
+    color: white;
+    background: black;
+    opacity: 0.7;
+    cursor: pointer;
+}
+.showmore:hover {
+    opacity: 1;
+}
+
+.categoryRow{
+    overflow: hidden;
+    padding-bottom: 14px;
+}
 
 
 /* ==|== non-semantic helper classes ========================================
