--- a/midfi_proto/style.css
+++ b/midfi_proto/style.css
@@ -424,7 +424,7 @@ header {
 }
 
 #first {
-    margin-top: 80px;
+    margin-top: 90px;
 }
 
 .login {
@@ -441,7 +441,7 @@ header {
     border-bottom: 30px solid #333;
 
 }
-.mainTab {
+/*.mainTab {
     color: white;
     text-align: right;
     text-decoration: none;
@@ -468,7 +468,7 @@ header {
 
 .movies {color: rgb(153, 215, 223);}
 .series {color: rgb(228, 209, 152);}
-.kids { color: rgb(218, 147, 215);}
+.kids { color: rgb(218, 147, 215);}*/
 
 #search {
 width: 70px;
@@ -537,19 +537,21 @@ TAAAAAAAAAAABS
 
 .tab {
   display: inline-block;
-  width: 175px;
+  /*width: 175px;*/
   height: 26px;
   background: #64635F;
   padding: 5px 10px;
   position: relative;
-  border-top: 1px solid #1D1D1D;;
+  border-top: 1px solid #1D1D1D;
   margin-right: 6px;
   font-size: 0;
   cursor: pointer;
 }
 
 .tab span {
-  font-size: 14px;
+  white-space: nowrap;
+  font-size: 13px;
+  padding-right: 23px;
 }
 .tab i {
     font-size: 10px;
@@ -603,12 +605,14 @@ TAAAAAAAAAAABS
 .tab.active:after { background: #fff; }
 
 button.close {
-  padding: 0;
-  cursor: pointer;
-  background: 0 0;
-  border: 0;
-  -webkit-appearance: none;
-  -moz-appearance: none;
+  padding: 0px;
+cursor: pointer;
+/* background: 0 0; */
+border: 0;
+/* -webkit-appearance: none; */
+-moz-appearance: none;
+/* float: right; */
+position: absolute;
 }
 
 .close {
@@ -651,6 +655,69 @@ button.close {
 .tab-pane.active { display: block; }
 
 /* ----------------------------------------------------------- */
+
+.mainTab {
+  padding-left: 20px;
+  padding-right: 7px;
+}
+
+.tab:hover{
+  
+  /*-webkit-animation: blink_red .5s;*/
+}
+
+
+@-webkit-keyframes 'blink_red' {
+  50% {
+    padding: 2px 10px;
+    border-top: 4px solid red;
+  }
+
+  55% {
+    padding: 2px 10px;
+    border-top: 4px solid black;
+  }
+
+  70% {
+    padding: 2px 10px;
+    border-top: 4px solid red;
+  }
+
+  75% {
+    padding: 2px 10px;
+    border-top: 4px solid black;
+  }
+  90%,100% {
+    padding: 2px 10px;
+    border-top: 4px solid red;
+  }
+}
+
+@-webkit-keyframes 'blink_green' {
+  50% {
+    padding: 2px 10px;
+    border-top: 4px solid green;
+  }
+
+  55% {
+    padding: 2px 10px;
+    border-top: 4px solid black;
+  }
+
+  70% {
+    padding: 2px 10px;
+    border-top: 4px solid green;
+  }
+
+  75% {
+    padding: 2px 10px;
+    border-top: 4px solid black;
+  }
+  90%,100% {
+    padding: 2px 10px;
+    border-top: 4px solid green;
+  }
+}
 
 footer {
     height: 400px;
