--- a/midfi_proto/style.css
+++ b/midfi_proto/style.css
@@ -670,7 +670,7 @@ position: absolute;
 @-webkit-keyframes 'blink_red' {
   50% {
     padding: 2px 10px;
-    border-top: 4px solid red;
+    border-top: 4px solid rgb(255, 96, 96);
   }
 
   55% {
@@ -680,7 +680,7 @@ position: absolute;
 
   70% {
     padding: 2px 10px;
-    border-top: 4px solid red;
+    border-top: 4px solid rgb(255, 96, 96);
   }
 
   75% {
@@ -689,14 +689,14 @@ position: absolute;
   }
   90%,100% {
     padding: 2px 10px;
-    border-top: 4px solid red;
+    border-top: 4px solid rgb(255, 96, 96);
   }
 }
 
 @-webkit-keyframes 'blink_green' {
   50% {
     padding: 2px 10px;
-    border-top: 4px solid green;
+    border-top: 4px solid #40FF92;
   }
 
   55% {
@@ -706,7 +706,7 @@ position: absolute;
 
   70% {
     padding: 2px 10px;
-    border-top: 4px solid green;
+    border-top: 4px solid #40FF92;
   }
 
   75% {
@@ -715,13 +715,12 @@ position: absolute;
   }
   90%,100% {
     padding: 2px 10px;
-    border-top: 4px solid green;
+    border-top: 4px solid #40FF92;
   }
 }
 
 footer {
     height: 400px;
-    _background: red;
 }
 
 
