--- a/midfi_proto/style.css
+++ b/midfi_proto/style.css
@@ -773,13 +773,13 @@ footer {
 
 
         }
-        .sectionwrapper section {
+        section {
             width: 200px;
             display: inline-block;
             counter-increment: movie;
             
         }
-        .sectionwrapper section div {
+        /*.sectionwrapper section div {
 
             padding: 50px;
             overflow: hidden;
@@ -791,16 +791,16 @@ footer {
             margin: 10px;
             border-radius: 20%;
             background: -webkit-linear-gradient(45deg,white,rgb(207, 204, 204));
-        }
-        .sectionwrapper section div:hover {
-            /*background: green;
+        }*/
+        /*.sectionwrapper section div:hover {
+            background: green;
             transition: all 0.5s;
-            transform: scale(1.1);*/
+            transform: scale(1.1);
 
         }.sectionwrapper section div:after {
             content: 'Movie ' counter(movie);
 
-        }
+        }*/
 
         /*.scrollable:before,
         .scrollable:after {
@@ -968,6 +968,13 @@ figcaption h3 {
 }
 figcaption a {
     color: white;
+}
+
+.figureSeries {
+  width: 270px;
+}
+.sectionSeries {
+  width: 300px;
 }
 
 .stars {
