--- a/midfi_proto/style.css
+++ b/midfi_proto/style.css
@@ -428,23 +428,22 @@ header {
     margin-top: 63px;
 }
 
+#second {
+    height: 10px;
+}
+
 .login {
     color: white;
-text-align: right;
-text-decoration: none;
-font-size: 17px;
-/* text-shadow: 0 1px 0 black; */
-padding-right: 10px;
-padding-left: 10px;
-height: 0;
-float: right;
-border-left: 30px solid transparent;
-border-bottom: 24px solid #333;
-right: 0;
-position: absolute;
-top: 33px;
-font-size: 14px;
-color: rgb(138, 157, 158);
+    text-align: right;
+    text-decoration: none;
+    font-size:17px;
+    text-shadow: 0 1px 0 black;
+    padding-right: 10px;
+    padding-left: 10px;
+    height: 0;
+    float: right;
+    border-left: 30px solid transparent;
+    border-bottom: 30px solid #333;
 
 }
 /*.mainTab {
@@ -499,8 +498,6 @@ _border-radius: 13px;
 #movies {
   background: rgb(76, 72, 70);
   width: 100%;
-  z-index: 1;
-  opacity: 1;
   position: absolute;
   transition: all .5s ease-in;
 }
@@ -513,6 +510,7 @@ _border-radius: 13px;
   width: 100%;
   position: absolute;
   transition: all .5s ease-in;
+  /*transition-delay: 1s;*/
 }
 
 #watchlist {
@@ -523,32 +521,42 @@ _border-radius: 13px;
   width: 100%;
   position: absolute;
   transition: all .5s ease-in;
+  /*transition-delay: 1s;*/
 }
 
-#favtab {
-  background: rgb(95, 72, 61);
-  z-index: -1;
-  opacity: 0;
-  width: 100%;
-  position: absolute;
-  transition: all .5s ease-in;
+#whole_settings_thing {
+  max-width: 500px;
+  box-shadow: 0 10px 18px -8px;
 }
 
-/*<hat Oli eingefügt>*/
 #right_box {
     float:right;
     width:50%;
+    height:260px;
+    
 }
 
 #left_box {
     float:left;
     width:50%;
+    height:260px;
 }
 
 #top_box {
   float:top;
-  height:132px;
-  box-shadow: 0 10px 18px -8px;
+  height:140px;
+  background-color: rgb(44, 44, 44)
+}
+
+#spacy {
+  float: top;
+  height: 20px;
+  color: rgb(230, 230, 230);
+}
+
+#lower_box {
+  box-shadow: 0 10px 18px -8px; 
+  overflow: hidden;
 }
 
 .account_img {
@@ -559,7 +567,7 @@ _border-radius: 13px;
   margin: 5px;
   text-align: center;
 }
-/*</hat Oli eingefügt>*/
+
 .seriesTab {
   /*color: rgb(221, 213, 175);*/
   color: rgb(208, 177, 135);
@@ -815,9 +823,6 @@ position: absolute;
   border-top-width: 0px;
   border-bottom-width: 0px;
 }
-.watchLater:before {
-  content: '+ ';
-}
 
 @-webkit-keyframes 'watch_list' {
   50% {
@@ -861,7 +866,7 @@ footer {
             box-shadow: 0 10px 18px -8px;
             padding: 0px;
             display: inline-flex;
-            cursor: -webkit-grab;
+            cursor: pointer;
             _position: relative;
         }
 
@@ -1005,7 +1010,7 @@ figure {
     _border: 1px solid white;
     _box-shadow: 1px rgba(255,255,255,.3);
     display: block;
-    /*cursor: pointer;*/
+    cursor: pointer;
     overflow: hidden;
 }
 
@@ -1047,14 +1052,12 @@ figcaption p {
 }
 
 figcaption h3 {
-    padding-left: 50px;
     transition-delay: .2s;
 }
 
 figcaption p {
     transition-delay: .4s;
     font-size: 0.8em;
-    /*cursor: default;*/
 }
 
 figure:hover h3,
@@ -1067,27 +1070,7 @@ figcaption h3 {
     background: black;
     margin-top: 10px;
     color: rgb(168, 205, 209);
-    cursor: pointer;
 }
-
-figcaption h3:hover {
-    background: rgb(50, 61, 62);
-    margin-top: 10px;
-    color: rgb(168, 205, 209);
-}
-
-figcaption h3:before {
-  content: ' > ';
-  border: 2px solid rgb(168, 205, 209);
-  border-radius: 50%;
-  background: rgba(168, 205, 209,0.3);
-  position: absolute;
-  padding-left: 7px;
-  padding-right: 7px;
-  left: 10px;
-  top: 7px;
-}
-
 figcaption a {
     color: white;
 }
