--- a/midfi_proto_FINAL/style.css
+++ b/midfi_proto_FINAL/style.css
@@ -484,9 +484,10 @@ color: rgb(138, 157, 158);
 width: 70px;
 position: absolute;
 top: 30px;
-left: 0px;
+left: 2px;
 z-index: 10;
-_border-radius: 13px;
+border-radius: 13px;
+border: 0 solid black;
 }
 
 .main {
